# ReIPA

./: .gitignore  README.md
.github/workflows/: ci.yml  release.yml
bench/: REPORT.md  cap1.py  compare_capstone.py  run.sh
reipa/: Cargo.toml
reipa/crates/reipa-arm64/: Cargo.toml
reipa/crates/reipa-arm64/src/: cfg.rs  lib.rs
reipa/crates/reipa-image/: Cargo.toml
reipa/crates/reipa-image/src/: lib.rs
reipa/crates/reipa-macho/: Cargo.toml
reipa/crates/reipa-macho/src/: chained_fixups.rs  consts.rs  dyld_info.rs  fat.rs  header.rs  image.rs  lib.rs  linkedit.rs  reader.rs  segment.rs  symtab.rs
reipa/crates/reipa-macho/tests/: fixtures.rs  malformed.rs
reipa/crates/reipa-objc/: Cargo.toml
reipa/crates/reipa-objc/src/: lib.rs  type_encoding.rs
reipa/crates/reipa-swift/: Cargo.toml
reipa/crates/reipa-swift/src/: lib.rs  metadata.rs
